cluster_config/content-distribution-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-distribution
  labels:
    name: content-distribution
