cluster_config/asset-metadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: asset-metadata
  name: asset-metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-metadata
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: asset-metadata
    spec:
      containers:
        - image: dacm.assetmetadataservice
          imagePullPolicy: IfNotPresent
          name: asset-metadata
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
