cluster_config/content-distribution-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: content-distribution-backend
  name: content-distribution-backend
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5000
  selector:
    io.kompose.service: content-distribution-backend
